WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198208
With async overflow scrolling, programmatic scroll to a negative offset fails to clamp the scroll offset
https://bugs.webkit.org/show_bug.cgi?id=198208
Summary
With async overflow scrolling, programmatic scroll to a negative offset fails...
Simon Fraser (smfr)
Reported
2019-05-23 19:32:23 PDT
With async overflow scrolling, programmatic scroll to a negative offset fails to clamp the scroll offset
Attachments
Patch
(5.81 KB, patch)
2019-05-23 19:35 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-05-23 19:35:24 PDT
Created
attachment 370551
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-05-23 19:47:47 PDT
<
rdar://problem/49720087
>
WebKit Commit Bot
Comment 3
2019-05-23 20:25:34 PDT
Comment on
attachment 370551
[details]
Patch Clearing flags on attachment: 370551 Committed
r245742
: <
https://trac.webkit.org/changeset/245742
>
WebKit Commit Bot
Comment 4
2019-05-23 20:25:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug