With async overflow scrolling, programmatic scroll to a negative offset fails to clamp the scroll offset https://bugs.webkit.org/show_bug.cgi?id=198208 <rdar://problem/49720087>

Reviewed by Zalan Bujtas.

Source/WebCore:

RenderLayer::scrollToOffset() needs to pass the clamped offset to scrollingCoordinator->requestScrollPositionUpdate(),
otherwise the scrolling tree will round-trip a negative value and scrollLeft will end up negative.

Test: fast/scrolling/programmatic-scroll-to-negative-offset.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollToOffset):

LayoutTests:

* fast/scrolling/programmatic-scroll-to-negative-offset-expected.txt: Added.
* fast/scrolling/programmatic-scroll-to-negative-offset.html: Added.


Canonical link: https://commits.webkit.org/212275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245742 268f45cc-cd09-0410-ab3c-d52691b4dbfc